<resources>
    <string name="image_card">image card</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="policy">Privacy Policy</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="appearance_header">Appearance</string>
    <string name="theme_title">App Theme</string>
    <string name="button_icon">buttonIcon</string>
    <string name="favorite">Favorite</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="no_fav">No Favorite</string>
    <string name="no_res">No Results</string>
    <string name="download_premium_title">You should watch a Video to download this premium wallpaper</string>
    <string name="no_thanks">No Thanks</string>
    <string name="yes_watch">Yes Watch</string>
    <string name="success_applied">Successfully Applied.</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="both">Both</string>
    <string name="set_wallpaper_on">Set Wallpaper on</string>
    <string name="thumbnail">Thumbnail</string>
    <plurals name="wallpaper_s">
        <item quantity="one">%d Wallpaper</item>
        <item quantity="other">%d Wallpapers</item>
    </plurals>
</resources>