<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/set_wallpaper_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/set_wallpaper_on"
        android:fontFamily="@font/ps_semi_bold"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/on_home_screen_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_primary"
            android:text="@string/home_screen" />

        <Button
            android:id="@+id/on_lock_screen_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_primary"
            android:text="@string/lock_screen" />

        <Button
            android:id="@+id/on_both_screen_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_primary"
            android:text="@string/both" />
    </LinearLayout>



</LinearLayout>