<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1F22"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/thumbView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/thumbnail"
        android:scaleType="centerCrop" />

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/photo_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <View
        android:id="@+id/top_shadow"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/gradient_top" />

    <View
        android:id="@+id/bottom_shadow"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_bottom" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/full_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_light_24"
        app:subtitleTextColor="@color/colorDullWhite"
        app:titleTextColor="@color/colorWhite">

        <ImageView
            android:id="@+id/premiumImage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/image_card"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_crown_24"
            android:visibility="gone" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/bottomButtonNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/adView"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/borderless_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/button_icon"
                android:src="@drawable/ic_baseline_cloud_download_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/borderless_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/button_icon"
                android:src="@drawable/ic_baseline_add_to_home_screen_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/borderless_ripple"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/heartImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/button_icon"
                android:src="@drawable/ic_baseline_favorite_border_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:minHeight="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/set_wallpaper_banner_id" />

    <ProgressBar
        android:id="@+id/full_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>